# kenbun

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  deny.toml  flake.nix  pyproject.toml
.autopub/: release_info.json
.github/actions/prepare-release/: action.yml
.github/workflows/: CI.yml  release-check.yml  release.yml
docs/: spec.md
reports/: multi-ecosystem-detection-report.html
scripts/: autopub_kenbun.py  check_external_fixtures.py  version_tool.py
src/: diag.rs  entrypoint.rs  fileset.rs  lib.rs  manifest.rs  model.rs  node.rs  norm.rs  runtime.rs  scan.rs  workspace.rs
src/kenbun/: THIRD-PARTY-LICENSES.md  __init__.py  _kenbun.pyi
tests/: external_fixtures.json  test_analyze.py  test_external_runner.py  test_kenbun.py  test_node_scan.py  test_scan.py
